feat(dropdown): implement dropdown functionality

--- a/l18n/translations/en.json
+++ b/l18n/translations/en.json
@@ -1,5 +1,6 @@
 {
   "Select Categories": "Select Categories",
   "Select Dropdown": "Select Dropdown",
-  "Result": "Result"
+  "Result": "Result",
+  "No Item Selected": "No Item Selected"
 }
